--- a/02-mlflow/02-mlfow-exp-tracking.ipynb
+++ b/02-mlflow/02-mlfow-exp-tracking.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,23 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/08/30 10:33:26 INFO mlflow.tracking.fluent: Experiment with name 'taxi-prediction-xgboost-hyperopt' does not exist. Creating a new experiment.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='mlflow-artifacts:/107471247143277881', creation_time=1725014006861, experiment_id='107471247143277881', last_update_time=1725014006861, lifecycle_stage='active', name='taxi-prediction-xgboost-hyperopt', tags={}>"
+       "<Experiment: artifact_location='mlflow-artifacts:/114282133553756653', creation_time=1725019412855, experiment_id='114282133553756653', last_update_time=1725019412855, lifecycle_stage='active', name='taxi-prediction-xgboost-hyperopt-with-autolog', tags={}>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,13 +142,18 @@
     "# Set our tracking server uri for logging\n",
     "mlflow.set_tracking_uri(uri=\"http://127.0.0.1:5000\")\n",
     "\n",
+    "# run only one from the below and comment the other\n",
+    "\n",
     "# Create a new MLflow Experiment - Inside an experiment, there will be Runs\n",
-    "mlflow.set_experiment(\"taxi-prediction-xgboost-hyperopt\")"
+    "# mlflow.set_experiment(\"taxi-prediction-xgboost-hyperopt\")\n",
+    "\n",
+    "# Creating a new one for AutoLog, so can see the with and without AutoLog\n",
+    "mlflow.set_experiment(\"taxi-prediction-xgboost-hyperopt-with-autolog\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +276,13 @@
     "        mlflow.log_metric(\"rmse\", rmse)\n",
     "\n",
     "    return {'loss': rmse, 'status': STATUS_OK}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below code does not use AutoLog. For AutoLog, skip this step"
    ]
   },
   {
@@ -1034,6 +1039,65 @@
     "    max_evals=10,\n",
     "    trials=Trials()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also use the Built-in Auto Logging Provided by MLFlow for different models\n",
+    "\n",
+    "Here, we are testing for a single example. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/08/30 12:13:50 WARNING mlflow.utils.autologging_utils: You are using an unsupported version of xgboost. If you encounter errors during autologging, try upgrading / downgrading xgboost to a supported version, or try upgrading MLflow.\n",
+      "2024/08/30 12:13:50 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'f8b84fbc41164e0eacc741978372fbc4', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# these parameters are taken after running the above cell and\n",
+    "# checking which parameters got the best rmse\n",
+    "params = {\n",
+    "    'max_depth': 36,\n",
+    "    'learning_rate': 0.4,\n",
+    "    'reg_alpha': 0.015,\n",
+    "    'reg_lambda': 0.0053,\n",
+    "    'min_child_weight': 15.88,\n",
+    "    'seed': 42\n",
+    "}\n",
+    "\n",
+    "# we provide the autolog here, just before the run function which gets executed in objective function\n",
+    "mlflow.xgboost.autolog() \n",
+    "\n",
+    "# so the objective will be called 10 times and for each time, a run will be registered in the MLFlow\n",
+    "booster = xgb.train(\n",
+    "            params=params,\n",
+    "            dtrain=train,\n",
+    "            num_boost_round=100,\n",
+    "            evals=[(valid, 'validation')],\n",
+    "            early_stopping_rounds=10\n",
+    "        )\n"
    ]
   },
   {
