--- a/02-mlflow/03-model-management.ipynb
+++ b/02-mlflow/03-model-management.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,21 +21,49 @@
     "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
     "\n",
-    "from sklearn.model_selection import cross_val_score, KFold"
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "from hyperopt import fmin, tpe, hp, STATUS_OK, Trials\n",
+    "from hyperopt.pyll import scope"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Downloading the dataset - Run When using GitHub, as the download path is based on GitHUb CodeSpaces\n",
+    "# !wget https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2024-01.parquet -P /workspaces/mlops-learning/01-intro/data\n",
+    "# !wget https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2024-02.parquet -P /workspaces/mlops-learning/01-intro/data\n",
+    "\n",
+    "\n",
+    "# # Download 2021 data\n",
+    "# !wget https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2021-01.parquet -P /workspaces/mlops-learning/01-intro/data\n",
+    "# !wget https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2021-02.parquet -P /workspaces/mlops-learning/01-intro/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/08/30 13:55:21 INFO mlflow.tracking.fluent: Experiment with name 'taxi-model-management' does not exist. Creating a new experiment.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='mlflow-artifacts:/137411656770551778', creation_time=1725021597969, experiment_id='137411656770551778', last_update_time=1725021597969, lifecycle_stage='active', name='taxi-prediction-model-management', tags={}>"
+       "<Experiment: artifact_location='mlflow-artifacts:/380033675744979635', creation_time=1725026121906, experiment_id='380033675744979635', last_update_time=1725026121906, lifecycle_stage='active', name='taxi-model-management', tags={}>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,12 +75,12 @@
     "mlflow.set_tracking_uri(uri=\"http://127.0.0.1:5000\")\n",
     "\n",
     "# Create a new MLflow Experiment - Inside an experiment, there will be Runs\n",
-    "mlflow.set_experiment(\"taxi-prediction-model-management\")"
+    "mlflow.set_experiment(\"taxi-model-management\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,24 +154,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xgboost as xgb\n",
-    "\n",
-    "from hyperopt import fmin, tpe, hp, STATUS_OK, Trials\n",
-    "from hyperopt.pyll import scope"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "train = xgb.DMatrix(X_train, label=y_train)\n",
     "valid = xgb.DMatrix(X_valid, label=y_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auto Logging for XGBoost Fails for a Reason - Crashing the Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # these parameters are taken after running the above cell and\n",
+    "# # checking which parameters got the best rmse\n",
+    "# params = {\n",
+    "#     'max_depth': 36,\n",
+    "#     'learning_rate': 0.4,\n",
+    "#     'reg_alpha': 0.015,\n",
+    "#     'reg_lambda': 0.0053,\n",
+    "#     'min_child_weight': 15.88,\n",
+    "#     'seed': 42\n",
+    "# }\n",
+    "\n",
+    "# # we provide the autolog here, just before the run function which gets executed in objective function\n",
+    "# # mlflow.xgboost.autolog() \n",
+    "\n",
+    "# booster = xgb.train(\n",
+    "#             params=params,\n",
+    "#             dtrain=train,\n",
+    "#             num_boost_round=100,\n",
+    "#             evals=[(valid, 'validation')],\n",
+    "#             early_stopping_rounds=10\n",
+    "#         )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving the Model"
    ]
   },
   {
@@ -186,64 +245,16 @@
       "[28]\tvalidation-rmse:4.50144\n",
       "[29]\tvalidation-rmse:4.49909\n"
      ]
-    }
-   ],
-   "source": [
-    "# these parameters are taken after running the above cell and\n",
-    "# checking which parameters got the best rmse\n",
-    "params = {\n",
-    "    'max_depth': 36,\n",
-    "    'learning_rate': 0.4,\n",
-    "    'reg_alpha': 0.015,\n",
-    "    'reg_lambda': 0.0053,\n",
-    "    'min_child_weight': 15.88,\n",
-    "    'seed': 42\n",
-    "}\n",
-    "\n",
-    "# we provide the autolog here, just before the run function which gets executed in objective function\n",
-    "# mlflow.xgboost.autolog() \n",
-    "\n",
-    "# so the objective will be called 10 times and for each time, a run will be registered in the MLFlow\n",
-    "booster = xgb.train(\n",
-    "            params=params,\n",
-    "            dtrain=train,\n",
-    "            num_boost_round=100,\n",
-    "            evals=[(valid, 'validation')],\n",
-    "            early_stopping_rounds=10\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we provide the autolog here, just before the run function which gets executed in objective function\n",
-    "mlflow.xgboost.autolog() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/08/30 12:50:06 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'cf498044cda94b008bc35b21541095c3', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current xgboost workflow\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [13:56:07] WARNING: /workspace/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "2024/08/30 13:56:10 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2024/08/30 13:56:11 INFO mlflow.tracking._tracking_service.client: 🏃 View run shivering-stag-673 at: http://127.0.0.1:5000/#/experiments/380033675744979635/runs/401da8cb355c486395c3026968ba5f6d.\n",
+      "2024/08/30 13:56:11 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/380033675744979635.\n"
      ]
     }
    ],
@@ -259,14 +270,29 @@
     "    'seed': 42\n",
     "}\n",
     "\n",
-    "# so the objective will be called 10 times and for each time, a run will be registered in the MLFlow\n",
-    "booster = xgb.train(\n",
-    "            params=params,\n",
-    "            dtrain=train,\n",
-    "            num_boost_round=100,\n",
-    "            evals=[(valid, 'validation')],\n",
-    "            early_stopping_rounds=10\n",
-    "        )"
+    "# starting the run\n",
+    "with mlflow.start_run():\n",
+    "    mlflow.set_tag(\"model\",'XGBoost')\n",
+    "\n",
+    "    # logging the parameters\n",
+    "    mlflow.log_params(params)\n",
+    "    \n",
+    "    booster = xgb.train(\n",
+    "                params=params,\n",
+    "                dtrain=train,\n",
+    "                num_boost_round=100,\n",
+    "                evals=[(valid, 'validation')],\n",
+    "                early_stopping_rounds=10\n",
+    "            )\n",
+    "    \n",
+    "    y_pred = booster.predict(valid)\n",
+    "\n",
+    "    # logging the predictions\n",
+    "    rmse = root_mean_squared_error(y_val, y_pred)\n",
+    "    mlflow.log_metric('rmse',rmse)\n",
+    "\n",
+    "    # saving the model - creates a folder and stores the model in that folder\n",
+    "    mlflow.xgboost.log_model(booster, artifact_path='models_mlflow')"
    ]
   },
   {
@@ -279,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -293,9 +319,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
