Saving Models and Loading Models

--- a/02-mlflow/03-model-management.ipynb
+++ b/02-mlflow/03-model-management.ipynb
@@ -54,13 +54,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/08/30 13:55:21 INFO mlflow.tracking.fluent: Experiment with name 'taxi-model-management' does not exist. Creating a new experiment.\n"
+      "2024/08/30 19:35:23 INFO mlflow.tracking.fluent: Experiment with name 'taxi-model-management' does not exist. Creating a new experiment.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='mlflow-artifacts:/380033675744979635', creation_time=1725026121906, experiment_id='380033675744979635', last_update_time=1725026121906, lifecycle_stage='active', name='taxi-model-management', tags={}>"
+       "<Experiment: artifact_location='mlflow-artifacts:/479749850566603769', creation_time=1725026723957, experiment_id='479749850566603769', last_update_time=1725026723957, lifecycle_stage='active', name='taxi-model-management', tags={}>"
       ]
      },
      "execution_count": 3,
@@ -202,12 +202,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Saving the Model"
+    "Saving the Model\n",
+    "\n",
+    "We can save the model in two ways\n",
+    "\n",
+    "- Log model as an artifact\n",
+    "- Log model using the method log_method\n",
+    "\n",
+    "log_method stores more information about the model that is being saved"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -243,18 +250,19 @@
       "[26]\tvalidation-rmse:4.50451\n",
       "[27]\tvalidation-rmse:4.50134\n",
       "[28]\tvalidation-rmse:4.50144\n",
-      "[29]\tvalidation-rmse:4.49909\n"
+      "[29]\tvalidation-rmse:4.49909\n",
+      "[30]\tvalidation-rmse:4.50055\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/python/3.12.1/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [13:56:07] WARNING: /workspace/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "/home/topisano/Desktop/projects/mlops-learning/venv/lib/python3.11/site-packages/xgboost/core.py:158: UserWarning: [19:45:22] WARNING: /workspace/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "2024/08/30 13:56:10 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
-      "2024/08/30 13:56:11 INFO mlflow.tracking._tracking_service.client: 🏃 View run shivering-stag-673 at: http://127.0.0.1:5000/#/experiments/380033675744979635/runs/401da8cb355c486395c3026968ba5f6d.\n",
-      "2024/08/30 13:56:11 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/380033675744979635.\n"
+      "2024/08/30 19:45:23 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2024/08/30 19:45:23 INFO mlflow.tracking._tracking_service.client: 🏃 View run selective-goat-726 at: http://127.0.0.1:5000/#/experiments/479749850566603769/runs/d0550e2a887d4a7e99cf6f989a3bca5e.\n",
+      "2024/08/30 19:45:23 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/479749850566603769.\n"
      ]
     }
    ],
@@ -291,8 +299,179 @@
     "    rmse = root_mean_squared_error(y_val, y_pred)\n",
     "    mlflow.log_metric('rmse',rmse)\n",
     "\n",
+    "    # create a folder models\n",
+    "    # saving the preprocessor to the models folder\n",
+    "    with open('models/preprocessor.b', 'wb') as f_out:\n",
+    "        pickle.dump(dv, f_out)\n",
+    "\n",
+    "    # log the saved preprocessor\n",
+    "    mlflow.log_artifact('models/preprocessor.b','preprocessor')\n",
+    "\n",
     "    # saving the model - creates a folder and stores the model in that folder\n",
-    "    mlflow.xgboost.log_model(booster, artifact_path='models_mlflow')"
+    "    # a folder called mlartifacts is created. Inside this folder, there is an artifact\n",
+    "    # folder and inside that folder, the models_mlflow folder is created\n",
+    "    mlflow.xgboost.log_model(booster, artifact_path='models_mlflow')\n",
+    "\n",
+    "# inside the models_mlflow folder there wil be following files\n",
+    "# - MLmodel -> Contains the overview info about the below\n",
+    "# - conda.yaml -> contains info about how to run the model with conda\n",
+    "# - model.xgb -> the actual model\n",
+    "# - python_env.yaml -> contains the information of build dependencide\n",
+    "# - requirements.txt -> contains all the library names to be installed to run the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, with the above cell, we were able to create a model, log its metrics, finally log the model and preprocess to the mlfow artifacts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading the Model \n",
+    "\n",
+    "We can load the model in two flavours"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Flavour 1 / Method 1\n",
+    "\n",
+    "- In this approach we use the model as a python object from mlflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading artifacts:   0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading artifacts: 100%|██████████| 5/5 [00:00<00:00, 36.20it/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "mlflow.pyfunc.loaded_model:\n",
+       "  artifact_path: models_mlflow\n",
+       "  flavor: mlflow.xgboost\n",
+       "  run_id: d0550e2a887d4a7e99cf6f989a3bca5e"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is the model URI, this is unique to each run. Everytime we\n",
+    "# run the above training cell, a new URI will be generated, i.e. a new model will be saved\n",
+    "logged_model = 'runs:/d0550e2a887d4a7e99cf6f989a3bca5e/models_mlflow'\n",
+    "\n",
+    "# Load model as a PyFuncModel.\n",
+    "loaded_model = mlflow.pyfunc.load_model(logged_model)\n",
+    "\n",
+    "# we see that its an object of type pyfunction\n",
+    "loaded_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(4.50055089347854)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = loaded_model.predict(X_valid)\n",
+    "\n",
+    "root_mean_squared_error(y_val, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Flavour 2 \n",
+    "\n",
+    "- In this approach, we load the model directly as a XGBoost Object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading artifacts: 100%|██████████| 5/5 [00:00<00:00, 35.01it/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<xgboost.core.Booster at 0x75b4bd932bd0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# call the xgboost load_method and pass the URI\n",
+    "xgboost_model = mlflow.xgboost.load_model(logged_model)\n",
+    "\n",
+    "# we see that now we have an object of type XGBoost\n",
+    "xgboost_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(4.50055089347854)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = xgboost_model.predict(valid)\n",
+    "\n",
+    "root_mean_squared_error(y_val, y_pred)"
    ]
   },
   {
@@ -319,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
