--- a/02-mlflow/03-model-management.ipynb
+++ b/02-mlflow/03-model-management.ipynb
@@ -475,6 +475,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Information about both of these flavours are found in the file MLModel in the models_mlflow folder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
