--- a/02-mlflow/04-mlflow-model-registry.ipynb
+++ b/02-mlflow/04-mlflow-model-registry.ipynb
@@ -21,6 +21,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.svm import LinearSVR\n",
+    "\n",
+    "\n",
+    "from xgboost import XGBRegressor\n",
+    "from lightgbm import LGBMRegressor\n",
+    "\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score, KFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/08/31 14:42:21 INFO mlflow.tracking.fluent: Experiment with name 'taxi-model-registry' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='mlflow-artifacts:/478746432289998830', creation_time=1725095541014, experiment_id='478746432289998830', last_update_time=1725095541014, lifecycle_stage='active', name='taxi-model-registry', tags={}>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "\n",
+    "# Set our tracking server uri for logging\n",
+    "mlflow.set_tracking_uri(uri=\"http://127.0.0.1:5000\")\n",
+    "\n",
+    "# Create a new MLflow Experiment - Inside an experiment, there will be Runs\n",
+    "mlflow.set_experiment(\"taxi-model-registry\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a function to read the data, preprocess it and return it\n",
+    "def read_and_preprocess(filename):\n",
+    "    data = pd.read_parquet(filename)\n",
+    "    \n",
+    "    # create the target variable\n",
+    "    data['ride_duration'] = data['tpep_dropoff_datetime'] - data['tpep_pickup_datetime'] \n",
+    "    data['ride_duration'] = data['ride_duration'].apply(lambda x: x.total_seconds()/60) \n",
+    "\n",
+    "    # take only the data below 1 hour\n",
+    "    data = data[(data['ride_duration'] >= 1) & (data['ride_duration'] <= 60)]\n",
+    "\n",
+    "    # # sample the data to 70k rows\n",
+    "    # if len(data) > 70000:\n",
+    "    #     sampled_data = data.iloc[:70000,:].copy()\n",
+    "    # else:\n",
+    "    #     sampled_data = data.copy()\n",
+    "    sampled_data = data.copy()\n",
+    "    \n",
+    "    # chosing categorical\n",
+    "    categorical = ['PULocationID', 'DOLocationID']\n",
+    "\n",
+    "    # convert these numerical categorical features to string categorical features\n",
+    "    sampled_data[categorical] = sampled_data[categorical].astype(str)\n",
+    "\n",
+    "    return sampled_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = read_and_preprocess('../01-intro/data/yellow_tripdata_2021-01.parquet')\n",
+    "df_valid = read_and_preprocess('../01-intro/data/yellow_tripdata_2021-02.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chosing categorical and numerical features\n",
+    "categorical = ['PULocationID', 'DOLocationID']\n",
+    "numerical = ['trip_distance']\n",
+    "\n",
+    "# to use the DictVectorizer, we need to convert the dataframe to dict\n",
+    "train_dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
+    "val_dicts = df_valid[categorical + numerical].to_dict(orient='records')\n",
+    "\n",
+    "\n",
+    "dv = DictVectorizer()\n",
+    "X_train = dv.fit_transform(train_dicts)\n",
+    "X_valid = dv.fit_transform(val_dicts)\n",
+    "\n",
+    "# storing our target variable\n",
+    "target = 'ride_duration'\n",
+    "y_train = df_train[target].values\n",
+    "y_val = df_valid[target].values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -28,8 +156,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
